--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "noopy": "./src/commands/new.command.js"
+    "noopy": "./src/index.js"
   },
   "author": "",
   "license": "ISC",
